# rag-scale

./: .env.example  README.md  docker-compose.yml
backend-ai/: .env.example  Procfile  main.py  pyproject.toml
backend-ai/src/api/: router.py
backend-ai/src/api/endpoints/: auth.py  chat.py  ingest.py
backend-ai/src/core/: config.py  db.py  dependencies.py  llm_client.py  utils.py
backend-ai/src/db/: mem0.py  mongo.py  qdrant.py  redis.py  s3.py
backend-ai/src/models/: api.py  auth.py  chat.py  ingestion.py
backend-ai/src/services/: auth_service.py  batch_tracking_service.py  chunking.py  llm_service.py  pubsub_service.py  queue_service.py  streaming_service.py  tts_service.py  voice_agent.py
backend-ai/src/workers/: chunking_worker.py  cleanup_worker.py  embedding_worker.py  ingestion_worker.py
