[project]
name = "backend-ai"
version = "0.1.0"
description = "FastAPI Backend for RagScale"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.7.0",
    "certifi>=2024.12.14",
    "distro>=1.9.0",
    "groq>=0.13.1",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jiter>=0.8.2",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-ollama>=0.2.2",
    "langchain-qdrant>=0.1.4",
    "langchain-text-splitters>=0.3.5",
    "langgraph>=0.2.60",
    "langgraph-checkpoint>=2.0.9",
    "langgraph-sdk>=0.1.43",
    "langsmith>=0.2.9",
    "mem0ai>=0.1.28",
    "numpy>=2.2.1",
    "ollama>=0.4.5",
    "openai>=1.59.3",
    "orjson>=3.10.13",
    "packaging>=24.2",
    "portalocker>=3.1.1",
    "pydantic>=2.10.4",
    "pydantic-core>=2.27.2",
    "qdrant-client>=1.12.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.8.4",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "fastapi[standard]",
    "uvicorn",
    "redis",
    "rq",
    "python-multipart",
    "pypdf",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.6.0",
    "rank-bm25>=0.2.2",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "boto3>=1.42.29",
    "types-boto3[essential]>=1.42.29",
    "pydantic-settings>=2.12.0",
]
